# csharp-analyzer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHASE_1_GUIDE.md  PROJECT_SETUP.md  README.md  READY.md  STATUS.md  pyproject.toml
.github/workflows/: test.yml
rules/: anti_patterns.yaml  metrics.yaml  quality.yaml
src/csharp_analyzer/: __init__.py  cache.py  cli.py  git_utils.py  incremental.py  metrics.py  parser.py  reporter.py  rules.py
tests/: __init__.py  test_metrics.py  test_parser.py  test_rules.py
